Use Path.of and Stream.toList across codebase
Replaces legacy Paths.get(...) usages with Path.of(...) and swaps collect(Collectors.toList()) calls for Stream.toList() across multiple modules to modernize the code, reduce imports and clean up unused imports. Also includes minor cleanups and a bugfix in KeyPersistenceService.generateRSAKeypair() to return the generated KeyPair inside the try block and throw on NoSuchAlgorithmException instead of returning a null/invalid value. No functional behavior intended to change aside from these modernizations and the keypair fix.