@@ -697,7 +697,7 @@ public class AdminSettingsController {
                 if (path != null && !path.trim().isEmpty()) {
                     try {
                         java.nio.file.Path normalized =
-                                java.nio.file.Paths.get(path.trim()).toAbsolutePath().normalize();
+                                java.nio.file.Path.of(path.trim()).toAbsolutePath().normalize();
                         String normalizedStr = normalized.toString();
 
                         // Check for duplicates
@@ -714,9 +714,9 @@ public class AdminSettingsController {
             // Check for overlapping paths
             java.util.List<String> pathList = new java.util.ArrayList<>(normalizedPaths);
             for (int i = 0; i < pathList.size(); i++) {
-                java.nio.file.Path path1 = java.nio.file.Paths.get(pathList.get(i));
+                java.nio.file.Path path1 = java.nio.file.Path.of(pathList.get(i));
                 for (int j = i + 1; j < pathList.size(); j++) {
-                    java.nio.file.Path path2 = java.nio.file.Paths.get(pathList.get(j));
+                    java.nio.file.Path path2 = java.nio.file.Path.of(pathList.get(j));
                     if (path1.startsWith(path2) || path2.startsWith(path1)) {
                         return "Overlapping paths detected: " + path1 + " and " + path2;
                     }
